feat: resolve sub dependencies and add refreshtoken endpoint